--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Personal framework",
   "main": "gulpfile.js",
   "devDependencies": {
+    "@babel/preset-env": "^7.0.0-beta.32",
     "babel-eslint": "^7.2.3",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.18.13",
@@ -70,6 +72,7 @@
     "react-dom": "^16.1.1",
     "require-dir": "^0.3.2",
     "rimraf": "^2.6.1",
+    "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-eslint": "^4.0.0",
     "rollup-plugin-includepaths": "^0.2.2",
